feat: update contact

--- a/src/application/assets/ApplicationSection.scss
+++ b/src/application/assets/ApplicationSection.scss
@@ -16,6 +16,11 @@ $application-section-background-color: $primary-background-color !default;
         cursor: pointer;
       }
     }
+    .muncher-button {
+      padding: 0;
+      font-size: .9rem;
+      text-transform: none;
+    }
   }
 
   .muncher-dropdown {
